...
    @IBAction func tableEdit(_ sender: Any) {
        self.tableView.setEditing(!self.tableView.isEditing, animated: true)
        
        let barButton = sender as! UIBarButtonItem
        if self.tableView.isEditing {
            stopTimer()
            barButton.title = "Done"
            barButton.style = .done
        }else{
            runTimer()
            barButton.title = "Edit"
            barButton.style = .plain
        }
    }
    
    @objc func refreshEvent(_ refreshControl: UIRefreshControl) {
        refreshControl.endRefreshing()
...
