...
                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e6g-O9-Vem">
                                        <rect key="frame" x="8" y="5" width="310" height="39"/>
                                        <color key="backgroundColor" red="0.25946119429999998" green="0.210164398" blue="0.18658778070000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
                                        <state key="normal" title="END OF TOUR">
                                            <color key="titleColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="3"/>
                                            </userDefinedRuntimeAttribute>
...
