...
                            <constraint firstItem="Pgd-My-dON" firstAttribute="top" secondItem="5K6-L9-Lly" secondAttribute="bottom" id="hNG-YI-Hy3"/>
                            <constraint firstItem="Pgd-My-dON" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xIi-2r-EaS"/>
                            <constraint firstItem="5K6-L9-Lly" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zad-CS-KUO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Market Price" id="5FS-Xq-R6z">
                        <barButtonItem key="backBarButtonItem" title="Back" id="91U-E3-5F2"/>
                        <barButtonItem key="leftBarButtonItem" title="Edit" style="plain" id="7GX-Ku-T1D">
                            <connections>
                                <action selector="tableEdit:" destination="BYZ-38-t0r" id="GUH-gH-rHr"/>
                            </connections>
                        </barButtonItem>
...
